Use alpine image for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - postgres
 
   postgres:
-    image: "postgres:14.2"
+    image: "postgres:14.2-alpine"
     restart: always
     ports:
       - "5000:5432"
